compiler/mesh-parser/tests/snapshots/parser_tests__if_single_line.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"if true do 1 end\")"
---
SOURCE_FILE@0..16
  IF_EXPR@0..16
    IF_KW@0..2 "if"
    WHITESPACE@2..3 " "
    LITERAL@3..7
      TRUE_KW@3..7 "true"
    WHITESPACE@7..8 " "
    DO_KW@8..10 "do"
    WHITESPACE@10..11 " "
    BLOCK@11..12
      LITERAL@11..12
        INT_LITERAL@11..12 "1"
    WHITESPACE@12..13 " "
    END_KW@13..16 "end"
  EOF@16..16 ""
