compiler/mesh-parser/tests/snapshots/parser_tests__import_dotted_path.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"import Foo.Bar.Baz\")"
---
SOURCE_FILE@0..18
  IMPORT_DECL@0..18
    IMPORT_KW@0..6 "import"
    WHITESPACE@6..7 " "
    PATH@7..18
      IDENT@7..10 "Foo"
      DOT@10..11 "."
      IDENT@11..14 "Bar"
      DOT@14..15 "."
      IDENT@15..18 "Baz"
  EOF@18..18 ""
