compiler/mesh-parser/tests/snapshots/parser_tests__import_simple.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"import Math\")"
---
SOURCE_FILE@0..11
  IMPORT_DECL@0..11
    IMPORT_KW@0..6 "import"
    WHITESPACE@6..7 " "
    PATH@7..11
      IDENT@7..11 "Math"
  EOF@11..11 ""
