compiler/mesh-parser/tests/snapshots/parser_tests__index_access.snap
---
source: crates/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"a[0]\")"
---
SOURCE_FILE@0..4
  INDEX_EXPR@0..4
    NAME_REF@0..1
      IDENT@0..1 "a"
    L_BRACKET@1..2 "["
    LITERAL@2..3
      INT_LITERAL@2..3 "0"
    R_BRACKET@3..4 "]"
  EOF@4..4 ""
