compiler/mesh-parser/tests/snapshots/parser_tests__interface_simple.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"interface Printable do\\n  fn to_string(self) -> String\\nend\")"
---
SOURCE_FILE@0..57
  INTERFACE_DEF@0..57
    INTERFACE_KW@0..9 "interface"
    WHITESPACE@9..10 " "
    NAME@10..19
      IDENT@10..19 "Printable"
    WHITESPACE@19..20 " "
    DO_KW@20..22 "do"
    NEWLINE@22..23 "\n"
    WHITESPACE@23..25 "  "
    INTERFACE_METHOD@25..53
      FN_KW@25..27 "fn"
      WHITESPACE@27..28 " "
      NAME@28..37
        IDENT@28..37 "to_string"
      PARAM_LIST@37..43
        L_PAREN@37..38 "("
        PARAM@38..42
          SELF_KW@38..42 "self"
        R_PAREN@42..43 ")"
      WHITESPACE@43..44 " "
      TYPE_ANNOTATION@44..53
        ARROW@44..46 "->"
        WHITESPACE@46..47 " "
        IDENT@47..53 "String"
    NEWLINE@53..54 "\n"
    END_KW@54..57 "end"
  EOF@57..57 ""
