compiler/mesh-parser/tests/snapshots/parser_tests__interface_with_generic.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"interface Container<T> do\\n  fn get(self) -> T\\n  fn set(self, value :: T)\\nend\")"
---
SOURCE_FILE@0..76
  INTERFACE_DEF@0..76
    INTERFACE_KW@0..9 "interface"
    WHITESPACE@9..10 " "
    NAME@10..19
      IDENT@10..19 "Container"
    GENERIC_PARAM_LIST@19..22
      LT@19..20 "<"
      IDENT@20..21 "T"
      GT@21..22 ">"
    WHITESPACE@22..23 " "
    DO_KW@23..25 "do"
    NEWLINE@25..26 "\n"
    WHITESPACE@26..28 "  "
    INTERFACE_METHOD@28..45
      FN_KW@28..30 "fn"
      WHITESPACE@30..31 " "
      NAME@31..34
        IDENT@31..34 "get"
      PARAM_LIST@34..40
        L_PAREN@34..35 "("
        PARAM@35..39
          SELF_KW@35..39 "self"
        R_PAREN@39..40 ")"
      WHITESPACE@40..41 " "
      TYPE_ANNOTATION@41..45
        ARROW@41..43 "->"
        WHITESPACE@43..44 " "
        IDENT@44..45 "T"
    NEWLINE@45..46 "\n"
    WHITESPACE@46..48 "  "
    INTERFACE_METHOD@48..72
      FN_KW@48..50 "fn"
      WHITESPACE@50..51 " "
      NAME@51..54
        IDENT@51..54 "set"
      PARAM_LIST@54..72
        L_PAREN@54..55 "("
        PARAM@55..59
          SELF_KW@55..59 "self"
        COMMA@59..60 ","
        WHITESPACE@60..61 " "
        PARAM@61..71
          IDENT@61..66 "value"
          WHITESPACE@66..67 " "
          TYPE_ANNOTATION@67..71
            COLON_COLON@67..69 "::"
            WHITESPACE@69..70 " "
            IDENT@70..71 "T"
        R_PAREN@71..72 ")"
    NEWLINE@72..73 "\n"
    END_KW@73..76 "end"
  EOF@76..76 ""
