compiler/mesh-parser/tests/snapshots/parser_tests__let_multiple_statements.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "block_and_debug(\"let x = 1\\nlet y = 2\")"
---
SOURCE_FILE@0..19
  BLOCK@0..19
    LET_BINDING@0..9
      LET_KW@0..3 "let"
      WHITESPACE@3..4 " "
      NAME@4..5
        IDENT@4..5 "x"
      WHITESPACE@5..6 " "
      EQ@6..7 "="
      WHITESPACE@7..8 " "
      LITERAL@8..9
        INT_LITERAL@8..9 "1"
    NEWLINE@9..10 "\n"
    LET_BINDING@10..19
      LET_KW@10..13 "let"
      WHITESPACE@13..14 " "
      NAME@14..15
        IDENT@14..15 "y"
      WHITESPACE@15..16 " "
      EQ@16..17 "="
      WHITESPACE@17..18 " "
      LITERAL@18..19
        INT_LITERAL@18..19 "2"
  EOF@19..19 ""
