compiler/mesh-parser/tests/snapshots/parser_tests__let_simple.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "block_and_debug(\"let x = 5\")"
---
SOURCE_FILE@0..9
  BLOCK@0..9
    LET_BINDING@0..9
      LET_KW@0..3 "let"
      WHITESPACE@3..4 " "
      NAME@4..5
        IDENT@4..5 "x"
      WHITESPACE@5..6 " "
      EQ@6..7 "="
      WHITESPACE@7..8 " "
      LITERAL@8..9
        INT_LITERAL@8..9 "5"
  EOF@9..9 ""
